--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown">Articles</a>
+              <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown">Ramesh Art</a>
                 <ul class="dropdown-menu" role="menu">
                   <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown">Standard</a>
                     <ul class="dropdown-menu">
