--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                   <li><a href="typography.html"><i class="fa fa-font"></i> Typography</a></li>
                 </ul>
               </li>
-              <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown">Shop</a>
+              <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown">Online</a>
                 <ul class="dropdown-menu" role="menu">
                   <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown">Product</a>
                     <ul class="dropdown-menu">
