--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
             <div class="row">
               <div class="col-sm-6 col-md-8 col-lg-9">
                 <div class="callout-text font-alt">
-                  <h4 style="margin-top: 0px; font-;">Start Creating Beautiful Websites</h4>
-                  <p style="margin-bottom: 0px;">Download Titan Free today!</p>
+                  <h4 style="margin-top: 0px; font-;">This is feature1 Changes</h4>
+                  <p style="margin-bottom: 0px;">This feature is going blow your mind</p>
                 </div>
               </div>
               <div class="col-sm-6 col-md-4 col-lg-3">
