--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
                   <li><a href="index_finance.html">Finance</a></li>
                   <li><a href="index_landing.html">Landing Page</a></li>
                   <li><a href="index_photography.html">Photography</a></li>
-                  <li><a href="index_shop.html">Shop</a></li>
+                  <li><a href="index_shop.html">Online</a></li>
                 </ul>
               </li>
               <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown">Headers</a>
                 <ul class="dropdown-menu">
                   <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown">Static Image Header</a>
                     <ul class="dropdown-menu">
-                      <li><a href="index_mp_fullscreen_static.html">Fulscreen</a></li>
+                      <li><a href="index_mp_fullscreen_static.html">Fullscreen</a></li>
                       <li><a href="index_mp_classic_static.html">Classic</a></li>
                     </ul>
                   </li>
